export const snapshot = {};

snapshot[`pr-collector > should output help with -h flag 1`] = `
stdout:
"
Usage:   pr-collector [options] [REPOSITORY_ARGS]
Version: 1.0.0                                   

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  

"
stderr:
""
`;

snapshot[`pr-collector > should output help with --help flag 1`] = `
stdout:
"
Usage:   pr-collector [options] [REPOSITORY_ARGS]
Version: 1.0.0                                   

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  

"
stderr:
""
`;

snapshot[`pr-collector > should output short version with -V flag 1`] = `
stdout:
"1.0.0
"
stderr:
""
`;

snapshot[`pr-collector > should output long version with --version flag 1`] = `
stdout:
"pr-collector 1.0.0
"
stderr:
""
`;

snapshot[`pr-collector > should print help message and error message without args 1`] = `
stdout:
"
Usage:   pr-collector [options] [REPOSITORY_ARGS]
Version: 1.0.0                                   

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  

"
stderr:
"  error: Missing argument(s): REPOSITORY_ARGS

"
`;

snapshot[`pr-collector > should print error message for unknown option 1`] = `
stdout:
"
Usage:   pr-collector [options] [REPOSITORY_ARGS]
Version: 1.0.0                                   

Description:

  Collect PRs from multiple GitHub repositories.

Options:

  -h, --help     - Show this help.                            
  -V, --version  - Show the version number for this program.  

"
stderr:
'  error: Unknown option "--unknown-option". Did you mean option "--version"?

'
`;
